# handwritten-search

./: .gitignore  README.md  app.spec  blog.md  desktop_app.py  main.py  pyproject.toml  search.py  ui.py
api/: lancedb_adapter.py  qdrant_adapter.py
search-handwritten/: main.py
search-handwritten/api/: lancedb_adapter.py
src/: server.py  ui.py
tauri-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  main.tsx
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/reference-files-do-not-use/: lancedb-reference.rs  startup-reference.rs
tauri-app/src-tauri/src/: lancedb_adapter.rs  lib.rs
tauri-app/src/slides/: Slide1_1.tsx  Slide1_2.tsx  Slide2.tsx
